<resources>
    <string name="app_name">homework</string>
    <string name="history">History</string>
    <string name="new_training">New Training</string>
    <string name="appbar_scrolling_view_behavior">appbar_scrolling_view_behaviour</string>
    <string name="start">Start</string>
    <string name="stop">stop</string>
    <string name="Start_New_Training">startNewTraining</string>
    <string name="Results">results</string>
    <string name="fekvo">Fekvo:</string>
    <string name="tvfekvo">fekvo</string>
    <string name="has">has</string>
    <string name="tolo">tolo</string>
    <string name="huzo">huzo</string>
    <string name="Submit">submit</string>
    <string name="pushups">PushUps</string>
    <string name="pullups">PullUps</string>
    <string name="dips">Dips</string>
    <string name="Abs">Abs</string>
</resources>
